--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <input type="color" id="color">
         <br>
         <h3>Explosions-Radius</h3>
-        <input type="range" min="1" max="100" value="50" class="RadiusSlider">
+        <input type="range" min="1" max="100"    class="RadiusSlider">
         <br>
         <h3>Partikel-Anzahl</h3>
-        <input type="range" min="1" max="100" value="50" class="PartikelSlider">
+        <input type="range" min="1" max="100"  class="PartikelSlider">
         <br>
         <h3>Explosions-Dauer</h3>
-        <input type="range" min="1" max="100" value="50" class="TimeSlider">
+        <input type="range" min="1" max="100"  class="TimeSlider">
         <br>
         <h3>RaketenName</h3>
         <input type="text" id="RocketName">
