--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Main.js"></script>
+    <script src="Main.js" defer ></script>
     <script src="Rocket.js"></script>
     <script src="Explosion.js"></script>
     <script src="Particle.js"></script>
@@ -53,7 +53,7 @@
           </div> 
     </div>
 
-    <div id="Canvas">
+    <div>
         <canvas id="canvas"></canvas>
     </div>
 
